@@ -1,27 +1,35 @@
 // src/main/java/org/example/shared/security/SecurityConfig.java
 package org.example.shared.security;
 
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-
-import java.util.ArrayList;
-import java.util.List;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
+@EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
-    @Value("${app.cors.allowed-origins:*}")
-    private String allowedOrigins; // env: APP_CORS_ALLOWED_ORIGINS
+    @Value("${app.cors.allowed-origins:*}") // ENV: APP_CORS_ALLOWED_ORIGINS
+    private String allowedOrigins;
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
@@ -30,10 +38,10 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .cors(Customizer.withDefaults())
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
@@ -45,7 +53,7 @@ public class SecurityConfig {
                 ).permitAll()
                 .anyRequest().authenticated()
             )
-            .httpBasic(h -> h.disable())
+            .httpBasic(b -> b.disable())
             .formLogin(f -> f.disable())
             .logout(l -> l.disable())
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -54,30 +62,29 @@ public class SecurityConfig {
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        return request -> {
-            CorsConfiguration c = new CorsConfiguration();
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration c = new CorsConfiguration();
 
-            // Wildcard support with credentials via patterns
-            if ("*".equals(allowedOrigins.trim())) {
-                c.addAllowedOriginPattern("*");
-            } else {
-                for (String origin : parseOrigins(allowedOrigins)) {
-                    c.addAllowedOrigin(origin);
-                }
-            }
+        List<String> origins = parseOrigins(allowedOrigins);
+        if (origins.size() == 1 && "*".equals(origins.get(0))) {
+            c.addAllowedOriginPattern("*"); // dev only; avoid in prod with credentials
+        } else {
+            origins.forEach(c::addAllowedOrigin);
+        }
 
-            c.setAllowCredentials(true);
-            c.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-            c.setAllowedHeaders(List.of("*"));
-            c.setExposedHeaders(List.of("ETag","Location","Link"));
-            c.setMaxAge(3600L);
-            return c;
-        };
+        c.setAllowCredentials(true);
+        c.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        c.setAllowedHeaders(Arrays.asList("Authorization","Content-Type"));
+        c.setExposedHeaders(Arrays.asList("ETag","Location","Link"));
+        c.setMaxAge(Duration.ofHours(1));
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", c);
+        return source;
     }
 
     private List<String> parseOrigins(String csv) {
-        String[] parts = csv.split(",");
+        String[] parts = csv == null ? new String[0] : csv.split(",");
         List<String> out = new ArrayList<>(parts.length);
         for (String raw : parts) {
             if (raw == null) continue;
@@ -85,11 +92,12 @@ public class SecurityConfig {
             if (o.endsWith("/")) o = o.substring(0, o.length() - 1);
             if (!o.isEmpty()) out.add(o);
         }
+        if (out.isEmpty()) out.add("*");
         return out;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
+    AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
         return configuration.getAuthenticationManager();
     }
 }
